# back.api/docs/swagger.yaml
@@ -1,5 +1,17 @@
 basePath: /api/v1
 definitions:
+  domain.RoleType:
+    enum:
+    - 0
+    - 1
+    - 2
+    - 999
+    type: integer
+    x-enum-varnames:
+    - DefaultRole
+    - UserRole
+    - OrganizationRole
+    - AdminRole
   errors.AppError:
     properties:
       code:
@@ -80,12 +92,12 @@ definitions:
     properties:
       id:
         type: integer
-      name:
-        type: string
       nickname:
         type: string
       password:
         type: string
+      role:
+        $ref: '#/definitions/domain.RoleType'
     type: object
   v1.Response:
     properties:
@@ -133,7 +145,7 @@ paths:
           schema:
             $ref: '#/definitions/errors.AppError'
         "404":
-          description: 'ErrUserNotFound(101): 존재하지 않는 학번입니다.'
+          description: 'ErrUserNotFound(101): 존재하지 않는 아이디입니다.'
           schema:
             $ref: '#/definitions/errors.AppError'
         "500":
@@ -186,9 +198,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: 회원가입을 위한 API. 학번, 비밀번호, 이름, 이메일, 입학연도 정보를 받아 회원을 등록합니다. email_verification_id는
-        반드시 verify-email로 검증에 성공한(사용됨 처리된) 레코드여야 하며, 그 레코드의 email과 요청의 email이 일치해야
-        합니다.
+      description: 회원가입을 위한 API. ID, 비밀번호, 닉네임 정보를 받아 회원을 등록합니다.
       parameters:
       - description: 회원가입 요청 파라미터
         in: body
